--- a/Views/Home/Rental.cshtml
+++ b/Views/Home/Rental.cshtml
@@ -1,6 +1,4 @@
-﻿@{
-    ViewBag.Title = "About";
-}
+﻿@{ ViewBag.Title = "About"; }
 
 
 <div class="page-title-area">
@@ -123,7 +121,7 @@
                     <div class="content show" id="tab_1_content">
                         <div class="products-description">
                             <p>
-                               The location of SMDC Shore 2 Pasay provides convenient trasportation options. It is near in major roads and highways, making it accessible to various parts of Metro Manila. Additionally,  the development is close to the Ninoy Aquino International Airport (NAIA), which is a significant advantage for frequent travelers.
+                                The location of SMDC Shore 2 Pasay provides convenient trasportation options. It is near in major roads and highways, making it accessible to various parts of Metro Manila. Additionally,  the development is close to the Ninoy Aquino International Airport (NAIA), which is a significant advantage for frequent travelers.
                             </p>
                         </div>
                     </div>
@@ -336,4 +334,58 @@
     </div>
 </div>
 
-<!-- End Shop Details Area -->
+<!-- Partnership -->
+<div class="faq-contact">
+    <div class="section-title">
+        <h2>Are you prepared to establish a partnership?</h2>
+        <div class="bar"></div>
+        <p>Unlock the potential for collaborative success in optimizing client transactions. Share your contact information with Future Craft Digital by completing the form below. Together, we can enhance our partnership and maximize the benefits for potential property owners.</p>
+    </div>
+    <form id="contactForm">
+        <div class="row">
+            <div class="col-lg-6 col-md-6">
+                <div class="form-group">
+                    <input type="text" name="name" placeholder="Full Name" class="form-control" value="" />
+                    <div class="invalid-feedback" style="display:block"></div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6">
+                <div class="form-group">
+                    <input type="text" name="name" placeholder="Company Name" class="form-control" value="" />
+                    <div class="invalid-feedback" style="display:block"></div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6">
+                <div class="form-group">
+                    <input type="text" name="email" placeholder="Work Email" class="form-control" value="" />
+                    <div class="invalid-feedback" style="display:block"></div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6">
+                <div class="form-group">
+                    <input type="text" name="subject" placeholder="Your Subject" class="form-control" value="" />
+                    <div class="invalid-feedback" style="display:block"></div>
+                </div>
+            </div>
+            <div class="col-lg-12 col-md-12">
+                <div class="form-group">
+                    <textarea name="text" cols="30" rows="6" placeholder="Write your message..." class="form-control"></textarea>
+                    <div class="invalid-feedback" style="display:block"></div>
+                </div>
+            </div>
+            <div class="form-group text-center">
+                <!-- Added 'text-center' class -->
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" name="terms" id="termsCheckbox" required>
+                    <label class="form-check-label" for="termsCheckbox">
+                        I accept the terms and conditions
+                    </label>
+                    <div class="invalid-feedback" style="display:block"></div>
+                </div>
+            </div>
+            <div class="col-lg-12 col-sm-12 text-center">
+                <button type="submit" class="btn btn-primary">Get in Touch</button>
+            </div>
+        </div>
+    </form>
+</div>
