--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                                             </a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/about-2/">
+                                            <a class="nav-link" href="@Url.Action("WebDesign", "Home")">    
                                                 Web Design and Development
                                             </a>
                                         </li>
