--- a/Views/Home/WebDesign.cshtml
+++ b/Views/Home/WebDesign.cshtml
@@ -3,24 +3,89 @@
 }
 
 
-<div class="main-banner">
-    <div class="d-table">
-        <div class="d-table-cell">
-            <div class="container">
-                <div class="row h-100 justify-content-center align-items-center">
-                    <div class="col-lg-12">
-                        <div class="hero-content">
-                            <h1>Web Design and Development Services</h1>
-                            <h3>Transforming Your Ideas into Beautiful and Functional Websites</h3>
-                            <br />
-                            <p>At Future Craft Digital, we specialize in creating stunning and user-friendly websites tailored to meet your unique business requirements. Whether you need a simple portfolio site or a complex e-commerce platform, our experienced team is here to help.</p>
-                            <a class="btn btn-primary" href="/contact/">Get Started</a>
+<div class="main-container">
+    <div class="container">
+        <div class="section-title">
+            <h1 class="font-weight-bold">Web Design and Development Services</h1>
+            <h4>Transforming Your Ideas into Beautiful and Functional Websites</h4>
+        </div>
+        <div class="bar"></div>
+        <div class="solutions-area ptb-80">
+            <div class="container justify-content-center">
+                <div class="row">
+                    @* Responsive and Mobile-Friendly Design *@
+                    <div class="col-lg-4 col-sm-6 col-md-6">
+                        <div class="solutions-box">
+                            <div class="icon">
+                                <i class="bx bx-landscape"></i>
+                                <img src="~/Assets/img/agency-image/agency-icon-bg.png" alt="image" />
+                            </div>
+                            <h3>Responsive and Mobile-Friendly Design</h3>
+                            <p>Lorem ipsum dolor sit amet elit, adipiscing, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.</p>
+                        </div>
+                    </div>
+                    @* Custom Website Development *@
+                    <div class="col-lg-4 col-sm-6 col-md-6">
+                        <div class="solutions-box">
+                            <div class="icon">
+                                <i class="bx bx-devices"></i>
+                                <img src="~/Assets/img/agency-image/agency-icon-bg.png" alt="image" />
+                            </div>
+                            <h3>Custom Website Development</h3>
+                            <p>Lorem ipsum dolor sit amet elit, adipiscing, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.</p>
+                        </div>
+                    </div>
+                    @* User Experience (UX) Design *@
+                    <div class="col-lg-4 col-sm-6 col-md-6">
+                        <div class="solutions-box">
+                            <div class="icon">
+                                <i class="bx bx-chalkboard"></i>
+                                <img src="~/Assets/img/agency-image/agency-icon-bg.png" alt="image" />
+                            </div>
+                            <h3>User Experience (UX) Design</h3>
+                            <p>Lorem ipsum dolor sit amet elit, adipiscing, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.</p>
+                        </div>
+                    </div>
+                    @* E-commerce Solutions *@
+                    <div class="col-lg-4 col-sm-6 col-md-6">
+                        <div class="solutions-box">
+                            <div class="icon">
+                                <i class="bx bx-chart"></i>
+                                <img src="~/Assets/img/agency-image/agency-icon-bg.png" alt="image" />
+                            </div>
+                            <h3>E-commerce Solutions</h3>
+                            <p>Lorem ipsum dolor sit amet elit, adipiscing, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.</p>
+                        </div>
+                    </div>
+                    @* Search Engine Optimization (SEO) *@
+                    <div class="col-lg-4 col-sm-6 col-md-6">
+                        <div class="solutions-box">
+                            <div class="icon">
+                                <i class="bx bx-search"></i>
+                                <img src="~/Assets/img/agency-image/agency-icon-bg.png" alt="image" />
+                            </div>
+                            <h3>Search Engine Optimization (SEO)</h3>
+                            <p>Lorem ipsum dolor sit amet elit, adipiscing, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.</p>
+                        </div>
+                    </div>
+                    @* Website Maintenance and Support *@
+                    <div class="col-lg-4 col-sm-6 col-md-6">
+                        <div class="solutions-box">
+                            <div class="icon">
+                                <i class="bx bx-support"></i>
+                                <img src="~/Assets/img/agency-image/agency-icon-bg.png" alt="image" />
+                            </div>
+                            <h3>Website Maintenance and Support</h3>
+                            <p>Lorem ipsum dolor sit amet elit, adipiscing, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </div> 
+
+
+
     <div class="shape1">
         <img src="../assets/img/shape1.png" alt="shape" />  
     </div>
