added services page and about us revision

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -84,21 +84,21 @@
                                             <a class="nav-link" href="/it-startup/">
                                                 Marketing
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                                    <polyline points="6 9 12 15 18 9"></polyline>
+                                                    <polyline points="9 6 15 12 9 18"></polyline>
                                                 </svg>
                                             </a>
                                             <ul class="dropdown-menu">
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="/it-startup/">SEO</a>
+                                                    <a class="nav-link" href="@Url.Action("SEO", "Home")">SEO</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="/it-startup-2/">Content Creation</a>
+                                                    <a class="nav-link" href="@Url.Action("ContentCreation", "Home")">Content Creation</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="/iot/">Digital Marketing</a>
+                                                    <a class="nav-link" href="@Url.Action("DigitalMarketing", "Home")">Digital Marketing</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="/hosting/">Social Media Management</a>
+                                                    <a class="nav-link" href="@Url.Action("SMM", "Home")">Social Media Management</a>
                                             </ul>
                                         </li>
 
@@ -126,7 +126,7 @@
                                             <a class="nav-link" href="@Url.Action("Software", "Home")">
                                                 Software
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                                    <polyline points="6 9 12 15 18 9"></polyline>
+                                                    <polyline points="9 6 15 12 9 18"></polyline>
                                                 </svg>
                                             </a>
                                             <ul class="dropdown-menu">
