--- a/Views/Home/SMM.cshtml
+++ b/Views/Home/SMM.cshtml
@@ -42,7 +42,7 @@
         <div class="row align-items-center">
             <div class="col-lg-6 services-details">
                 <div class="services-details-desc">
-                    <p>we stay up-to-date with the ever-evolving SEO landscape and the latest search engine algorithms. We continuously refine our strategies and techniques to ensure your website remains ahead of the competition. Our commitment to delivering transparent, data-driven, and results-oriented SEO services sets us apart. Partner with us to unlock the full potential of your online presence and achieve sustainable growth through expert SEO services.</p>
+                    <p>With our social media management services, you can expect comprehensive content creation and scheduling, community management and engagement, and analytics-driven performance tracking. We are dedicated to helping your business harness the power of social media to increase brand visibility, engage with your audience, and achieve your marketing goals. Let us handle your social media presence, while you focus on what you do best - running your business.</p>
                     <div class="services-details-accordion">
                         <div data-accordion-component="Accordion" class="accordion">
                             <div data-accordion-component="AccordionItem" class="accordion__item">
